--- a/manual.qmd
+++ b/manual.qmd
@@ -32,14 +32,15 @@ css: www/style.css
 
 # t-Test
 
-keiner mag t tests :/ (kein Jürgen-Zitat ._. )  
-  
+## Charlotte
+
+keiner mag t tests :/ (kein Jürgen-Zitat .\_. )
+
 **Hier kommen dann z.B. die R Code Chunks hin**
 
 ```{r}
 hist(sleep$extra)
 ```
-
 
 ## Paired samples
 
